# aircraft

./: CMakeLists.txt  README.md  install.ps1
.github/workflows/: build.yaml
include/: aircraft.hpp  camera.hpp  common.h  mission.hpp  settings.hpp
src/: aircraft.cpp  camera.cpp  mission.cpp
